<resources>
    <string name="app_name">Quản Lý Công Nợ</string>
    <string name="action_settings">Settings</string>
    <string name="you_offline">Bạn đang offline</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="take_date">Ngày vay</string>
    <string name="money">Số tiền</string>
    <string name="days">Số ngày vay</string>
    <string name="out_date">Ngày hết hạn</string>
    <string name="note">Ghi chú</string>
    <string name="address">Địa chỉ</string>
    <string name="phone">Số điện thoại</string>
    <string name="customer_id">Số CMND</string>
    <string name="user_care">Nhân viên thu</string>
    <string name="add_customer">Thêm khách hàng</string>
    <string name="manage_user">Quản lý nhân viên</string>
    <string name="user_name">Tên nhân viên</string>
    <string name="user_acc">Tài khoản</string>
    <string name="user_pass">Mật khẩu</string>
    <string name="user_pass_repeat">Nhập lại mật khẩu</string>
    <string name="user_role">Quyền</string>
    <string name="add_user">Thêm nhân viên</string>
    <string name="not_input_account">Bạn chưa nhập tài khoản</string>
    <string name="not_input_password">Bạn chưa nhập mật khẩu</string>
    <string name="error_check_connected">Có lỗi xảy ra vui lòng kiểm tra lại kết nối</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="account_not_exitsts">Tài khoản không có trên hệ thống</string>
    <string name="wrong_account_pass_check_again">Sai tên tài khoản hoặc mật khẩu! Vui lòng kiểm tra lại</string>
    <string name="pay_date">Ngày trả</string>
    <string name="assign_staff">Nhân viên thu</string>
    <string name="view_customer">Chi tiết khách hàng</string>
    <string name="updapte_success">Cập nhật thành công</string>
    <string name="no_customer">Không có khách hàng nào</string>
    <string name="updapte_failed">Cập nhật thất bại</string>
    <string name="update">Cập nhật</string>
    <string name="count_day">Tính số ngày</string>
    <string name="status">Trạng thái</string>
    <string name="click_to_choose_staff">Ấn vào đây để chọn nhân viên thu</string>
    <string name="press_back_exit">Vui lòng ấn một lần nữa để thoát ứng dụng</string>
    <string name="cancel">Huỷ</string>
    <string name="remove">Xoá</string>
    <string name="remove_success">Xoá khách hàng thành công</string>
    <string name="remove_failed">Xoá thất bại</string>
    <string name="account_exists">Tài khoản đã tồn tại vui lòng chọn tài khoản khác</string>
    <string name="add_success">Thêm nhân viên thành công</string>
    <string name="add_failed">Thêm nhân viên thất bại! Vui lòng thử lại</string>
</resources>
