<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/wrap_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp">

            <View
                android:id="@+id/above_img1"
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <ImageView
                android:id="@+id/ic_obj_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/above_img1"
                android:src="@drawable/ic_desire_outcome" />

            <TextView
                android:id="@+id/label_obj_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_obj_name"
                android:text="@string/user_name"
                android:textColor="@color/objective_label"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/edt_obj_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_obj_name"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/ic_obj_name"
                android:background="@null"
                android:gravity="left|bottom"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:minHeight="32dp"
                android:scrollHorizontally="true"
                android:textColor="@color/objective_text"
                android:textSize="@dimen/text_size_normal" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/edt_obj_name"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/ic_obj_name"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/warning1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line1"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_obj_name"
                android:text="Please input full name"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/recog_text_size_small"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wrap_take_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp">

            <View
                android:id="@+id/above_img2"
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <ImageView
                android:id="@+id/ic_take_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/above_img2"
                android:src="@drawable/ic_desire_outcome" />

            <TextView
                android:id="@+id/label_take_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_take_date"
                android:text="@string/user_acc"
                android:textColor="@color/objective_label"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/edt_take_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_take_date"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/ic_take_date"
                android:background="@null"
                android:gravity="left|bottom"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:minHeight="32dp"
                android:scrollHorizontally="true"
                android:textColor="@color/objective_text"
                android:textSize="@dimen/text_size_normal" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/edt_take_date"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/ic_take_date"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/warning2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line2"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_take_date"
                android:text="Please input full name"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/recog_text_size_small"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wrap_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp">

            <View
                android:id="@+id/above_img_money"
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <ImageView
                android:id="@+id/ic_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/above_img_money"
                android:src="@drawable/ic_desire_outcome" />

            <TextView
                android:id="@+id/label_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_money"
                android:text="@string/user_pass"
                android:textColor="@color/objective_label"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/edt_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_money"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/ic_money"
                android:background="@null"
                android:gravity="left|bottom"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:minHeight="32dp"
                android:scrollHorizontally="true"
                android:textColor="@color/objective_text"
                android:textSize="@dimen/text_size_normal" />

            <View
                android:id="@+id/line_money"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/edt_money"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/ic_money"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/warning_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_money"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_money"
                android:text="Please input full name"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/recog_text_size_small"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wrap_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp">

            <View
                android:id="@+id/above_img_day"
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <ImageView
                android:id="@+id/ic_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/above_img_day"
                android:src="@drawable/ic_desire_outcome" />

            <TextView
                android:id="@+id/label_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_day"
                android:text="@string/user_pass_repeat"
                android:textColor="@color/objective_label"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/edt_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="32dp"
                android:background="@null"
                android:gravity="left|bottom"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:minHeight="32dp"
                android:scrollHorizontally="true"
                android:textColor="@color/objective_text"
                android:textSize="@dimen/text_size_normal" />

            <View
                android:id="@+id/line_day"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/edt_day"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/ic_day"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/warning_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_day"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_day"
                android:text="Please input full name"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/recog_text_size_small"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wrap_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp">

            <View
                android:id="@+id/above_img_address"
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <ImageView
                android:id="@+id/ic_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/above_img_address"
                android:src="@drawable/ic_desire_outcome" />

            <TextView
                android:id="@+id/label_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_address"
                android:text="@string/address"
                android:textColor="@color/objective_label"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_address"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/ic_address"
                android:background="@null"
                android:gravity="left|bottom"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:minHeight="32dp"
                android:scrollHorizontally="true"
                android:textColor="@color/objective_text"
                android:textSize="@dimen/text_size_normal" />

            <View
                android:id="@+id/line_address"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/edt_address"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/ic_address"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/warning_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_address"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_address"
                android:text="Please input full name"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/recog_text_size_small"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/wrap_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp">

            <View
                android:id="@+id/above_img_phone"
                android:layout_width="1dp"
                android:layout_height="1dp" />

            <ImageView
                android:id="@+id/ic_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/above_img_phone"
                android:src="@drawable/ic_desire_outcome" />

            <TextView
                android:id="@+id/label_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_phone"
                android:text="@string/phone"
                android:textColor="@color/objective_label"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_phone"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/ic_phone"
                android:background="@null"
                android:gravity="left|bottom"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:minHeight="32dp"
                android:scrollHorizontally="true"
                android:textColor="@color/objective_text"
                android:textSize="@dimen/text_size_normal" />

            <View
                android:id="@+id/line_phone"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/edt_phone"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/ic_phone"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/warning_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/line_phone"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/ic_phone"
                android:text="Please input full name"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/recog_text_size_small"
                android:visibility="gone" />
        </RelativeLayout>
        <TextView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/wrap_pass"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_btn"
            android:gravity="center"
            android:text="Thêm nhân viên"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>